# TRIAXUS-Live-Visualisation

./: .env.example  .gitignore  BasicOperation.md  DATABASE_MIGRATIONS_INSTRUCTION.md  LICENSE  Makefile  PostgreSQL_reference_script.sql  README.md  RecommendedTableStructure.md  cli_typer.py  env.example  main.py  pyproject.toml  requirements.txt  settings.py  test_new.cnv  triaxus-plot
.runtime/: cnv_seen_realtime.json
GPS-map/: README.md  test_triaxus_map.py  triaxus_map.py
Live data feed simulation/: readme.md  simulation.py
Qt/: main.py  plot_view.py  plot_view_preview.py
archive/: _var_folders_qw_0cp47dzn72n0hq5hfwh9tzjh0000gn_t_tmp__8fuk70_pipeline_archive_metadata.json  _var_folders_qw_0cp47dzn72n0hq5hfwh9tzjh0000gn_t_tmpdqylc06f_complete_pipeline_metadata.json  _var_folders_qw_0cp47dzn72n0hq5hfwh9tzjh0000gn_t_tmpdxmp8tmy_pipeline_archive_metadata.json  _var_folders_qw_0cp47dzn72n0hq5hfwh9tzjh0000gn_t_tmpj0agclxp_large_pipeline_metadata.json  _var_folders_qw_0cp47dzn72n0hq5hfwh9tzjh0000gn_t_tmpsax37o8f_large_pipeline_metadata.json  _var_folders_qw_0cp47dzn72n0hq5hfwh9tzjh0000gn_t_tmpsax37o8f_large_pipeline_quality.json  _var_folders_qw_0cp47dzn72n0hq5hfwh9tzjh0000gn_t_tmpsuyestce_complete_pipeline_metadata.json  comprehensive_test_metadata.json  e2e_test_cnv_20251007T051641Z_metadata.json  in2023_v06_07_002_20250923T182112Z_metadata.json  in2023_v06_07_002_20250923T182112Z_quality.json  integration_test_cnv_20251007T051657Z_metadata.json  integration_test_cnv_20251007T071003Z_quality.json  live_realtime_demo_cnv_20251007T052036Z_metadata.json  live_realtime_demo_cnv_20251007T052036Z_quality.json  live_realtime_demo_cnv_20251007T052539Z_metadata.json  live_realtime_demo_cnv_20251007T052539Z_quality.json  live_realtime_demo_cnv_20251007T064351Z_metadata.json  live_realtime_demo_cnv_20251007T064351Z_quality.json  live_realtime_demo_cnv_20251007T064816Z_metadata.json  live_realtime_demo_cnv_20251007T064816Z_quality.json  live_realtime_demo_cnv_20251007T065118Z_metadata.json  live_realtime_demo_cnv_20251007T065118Z_quality.json  live_realtime_demo_cnv_20251007T065701Z_metadata.json  live_realtime_demo_cnv_20251007T065701Z_quality.json  live_realtime_demo_cnv_20251007T065715Z_metadata.json  live_realtime_demo_cnv_20251007T065715Z_quality.json  live_realtime_demo_cnv_20251007T070218Z_metadata.json  live_realtime_demo_cnv_20251007T070218Z_quality.json  live_realtime_demo_cnv_20251007T071436Z_metadata.json  live_realtime_demo_cnv_20251007T071436Z_quality.json  live_realtime_demo_cnv_20251007T071633Z_metadata.json  (+89 more)
(+218 files in other folders)
